# Cosmo_Logistic_E-Yantra_2023-24

./: README.md
ebot_control/: package.xml  setup.py
ebot_control/ebot_control/: duplicate_imu.py  ebot_dock.py  ebot_dock_nav.py  ebot_dock_service.py  rack_pose.yaml  reset_all.py  server.py  template_task_4a.py
ebot_docking/: CMakeLists.txt
ebot_docking/msg/: Ecustomtopic.msg
ebot_docking/scripts/: ebot_service_task4c.py  ebot_task3b.py  ebot_task4c.py  rack_pose.yaml  server.py  service_3b.py
ebot_docking/srv/: DockSw.srv  Rack.srv
ebot_nav2/config/: ekf.yaml  mapper_params_online_async.yaml
ebot_nav2/launch/: ebot_bringup_launch.py
ebot_nav2/maps/: map1.pgm  map1.yaml
ebot_nav2/params/: nav2_params.yaml
ebot_nav2/rviz/: nav2_default_view.rviz
ebot_nav2/scripts/: nav2_2b.py  nav2_cmd_task1c.py
ur5_moveit/: CMakeLists.txt  package.xml
ur5_moveit/config/: initial_positions.yaml
ur5_moveit/scripts/: starter_service.py  task1b.py  task2a_4b.py  task4b_endeff.py  tf_box.py  tool0_service.py
ur5_moveit/scripts/assets/: arm_base.stl
ur5_moveit/srv/: Tfvalue.srv
